hr-eureka-server container